--- a/content/1.introduction/1.getting-started.md
+++ b/content/1.introduction/1.getting-started.md
@@ -1,57 +1,78 @@
-# Getting Started
 
-From your Markdown files to a deployed website in few minutes.
 
-## Play online
+# title
+TokenID: Enhancing ERC20 Tokens with Off-Chain Metadata, Secure Metadata Updates, Cross-Chain Compatibility, and JSON Structure
 
-You can start playing with Docus in your browser using Stackblitz:
+## description
+Erc20 metadata.
 
-:button-link[Play on StackBlitz]{size="small" icon="IconStackBlitz" href="https://stackblitz.com/github/nuxt-themes/docus-starter" blank}
+Abstract:
+This white paper introduces TokenID, a proposal to extend the ERC20 token standard with the integration of off-chain metadata, secure metadata updates, cross-chain compatibility, and a structured JSON format. TokenID leverages an open-source API service, Sign in with Ethereum authentication, and a JSON data structure to enable token owners to securely update and store essential metadata elements. By incorporating off-chain metadata, TokenID ensures transparency, trustworthiness, and seamless interactions within the token ecosystem. The JSON structure facilitates standardized data representation, while the inclusion of a signature by the ERC20 deployer enhances metadata authenticity and integrity.
 
-## Create a new project
+### Introduction
+1.1 Background
+In the blockchain landscape, the need to verify token authenticity and ensure transparent metadata has become increasingly vital. TokenID addresses this challenge by enhancing the ERC20 token standard with off-chain metadata, secure metadata updates, cross-chain compatibility, and a structured JSON format.
 
-1. Start a fresh Docus project with:
+### 1.2 Objectives
+TokenID aims to establish a robust and versatile token ecosystem by incorporating off-chain metadata, secure metadata updates, cross-chain compatibility, and a structured JSON format. These features provide users with comprehensive, verifiable token information, fostering trust, transparency, and streamlined interactions within the token ecosystem.
 
-```bash [npx]
-npx nuxi@latest init docs -t themes/docus
-```
+The Importance of Off-Chain Metadata, Cross-Chain Compatibility, and JSON Structure
+### 2.1 Trustworthiness Verification
+Ensuring token legitimacy and trustworthiness requires additional verification mechanisms beyond the blockchain. The integration of off-chain metadata provides an extra layer of transparency, empowering users to assess a token's authenticity and trust.
 
-2. Install the dependencies in the `docs` folder:
+### 2.2 Limitations of On-Chain Storage for Metadata
 
-::code-group
+#### 2.2.1 Support for New Token Standards
+TokenID is designed to accommodate the evolving blockchain landscape and supports the seamless integration of new token standards. By adopting an off-chain approach for metadata storage, TokenID can adapt to emerging standards without requiring extensive modifications to the underlying infrastructure.
 
-  ```bash [npm]
-  npm install
-  ```
+#### 2.2.2 Cross-Chain Compatibility
+TokenID enables the inclusion of tokens from different blockchain networks, promoting interoperability. Through the API service and external server integration, token owners can provide metadata for tokens deployed on various blockchains, facilitating seamless interaction with diverse blockchain ecosystems.
 
-  ```bash [yarn]
-  yarn install
-  ```
+Protocol Overview: Off-Chain Metadata Integration, Secure Metadata Updates, and JSON Structure
+## 3.1 API Service Architecture
+TokenID utilizes an open-source API service as a gateway for accessing off-chain metadata. Standardized APIs allow querying applications to request token-specific information from the API service.
 
-  ```bash [pnpm]
-  pnpm install --shamefully-hoist
-  ```
+## 3.2 Token Owner Access and Secure Metadata Updates: Leveraging Sign in with Ethereum
 
-::
+### 3.2.1 Sign in with Ethereum Authentication
+Token owners securely access the API service and perform metadata updates through the Sign in with Ethereum authentication mechanism. This authentication process establishes ownership and ensures authorized access to metadata settings.
 
-3. Run the `dev` command to start Docus in development mode:
+### 3.2.2 Enhanced Security and Trust
+The integration of Sign in with Ethereum authentication enhances the security and trust of metadata updates. Leveraging Ethereum's inherent security features, token owners can authenticate themselves without relying on traditional username/password credentials.
 
-::code-group
+### 3.2.3 Protection Against Unauthorized Updates
+Sign in with Ethereum authentication ensures that only authorized token owners can access and update off-chain metadata, safeguarding against unauthorized modifications or tampering.
 
-```bash [npm]
-npm run dev
-```
+### 3.3 JSON Data Structure
+TokenID implements a structured JSON format for token metadata. The JSON structure defines key-value pairs to represent essential metadata elements, including the token name, symbol, contract address, liquidity pool address, logo image URL, token description, explorer verification code, social profile links, and more. This standardized format ensures compatibility and ease of integration with various applications.
 
-```bash [yarn]
-yarn dev
-```
+{
+"tokenDeployer": "0xabcdef123456789",
+"name": "MyToken",
+"symbol": "MTK",
+"contractAddress": "0x123456789abcdef",
+"metadata": {
+"liquidityPoolAddress": "0xabcdef123456789",
+"logoUrl": "https://example.com/mytoken-logo.png",
+"description": "MyToken is a decentralized digital currency...",
+"codeVerificationUrl": "https://example.com/mytoken-verification",
+"websiteUrl": "https://example.com/mytoken-website",
+"socialProfiles": {
+"twitter": "https://twitter.com/mytoken"
+}
+},
+"signature": "0xabc123def456..."
+}
 
-```bash [pnpm]
-pnpm run dev
-```
+## 3.4 Signature by ERC20 Deployer
+To enhance metadata authenticity and integrity, TokenID includes a signature by the ERC20 deployer within the JSON data structure. The deployer's signature serves as a cryptographic proof of authenticity, validating that the metadata originates from the authorized deployer.
 
-::
+Integration with Third-Party Platforms
+## 4.1 Wallet Integration
+TokenID facilitates seamless integration with wallet providers, allowing them to display comprehensive token information to users. Wallets can incorporate the JSON metadata obtained through the API service, including token description, social profile links, Uniswap LP addresses, and coin logo image URLs. This integration enhances the user experience and empowers users with detailed token insights.
 
-::alert{type="success"}
-✨ Well done! A browser window should automatically open for <http://localhost:3000>
-::
+## 4.2 Automated Market Maker (AMM) Integration
+Automated market makers, such as Uniswap, can leverage the Uniswap LP addresses provided in the metadata to access liquidity pool information and facilitate token swaps. Integrating TokenID's metadata into AMM platforms enhances the trading experience and simplifies token interactions.
+
+Conclusion
+The TokenID protocol presents a comprehensive solution for enhancing ERC20 tokens with off-chain metadata, secure metadata updates, cross-chain compatibility, and a structured JSON format. By incorporating off-chain metadata, TokenID addresses the limitations of on-chain storage, promotes trust, transparency, and seamless interactions within the token ecosystem. The inclusion of a structured JSON format and ERC20 deployer's signature facilitates standardized data representation and enhances metadata authenticity and integrity. Through integration with third-party platforms, TokenID enhances user experiences, fosters wider adoption, and paves the way for a new era of tokenization, empowering users with verifiable and up-to-date token information.
