--- a/content/0.index.md
+++ b/content/0.index.md
@@ -9,6 +9,11 @@ main:
 :ellipsis{right=0px width=75% blur=150px}
 
 ::block-hero
+
+
+# title
+TokenID: Enhancing ERC20 Tokens with Off-Chain Metadata, Secure Metadata Updates, Cross-Chain Compatibility, and JSON Structure
+
 ---
 cta:
   - Get started
