--- a/content/0.index.md
+++ b/content/0.index.md
@@ -1,14 +1,10 @@
 ---
-title: Home
+title: TokenID 
 navigation: false
 layout: page
 main:
   fluid: false
 ---
-
-:ellipsis{right=0px width=75% blur=150px}
-
-::block-hero
 
 
 # title
