--- a/content/0.index.md
+++ b/content/0.index.md
@@ -7,8 +7,7 @@ main:
 ---
 
 
-# title
-TokenID: Enhancing ERC20 Tokens with Off-Chain Metadata, Secure Metadata Updates, Cross-Chain Compatibility, and JSON Structure
+# TokenID: Enhancing ERC20 Tokens with Off-Chain Metadata, Secure Metadata Updates, Cross-Chain Compatibility, and JSON Structure
 
 ---
 cta:
