--- a/content/1.introduction/1.getting-started.md
+++ b/content/1.introduction/1.getting-started.md
@@ -1,10 +1,8 @@
 
 
-# title
-TokenID: Enhancing ERC20 Tokens with Off-Chain Metadata, Secure Metadata Updates, Cross-Chain Compatibility, and JSON Structure
+# TokenID: Enhancing ERC20 Tokens with Off-Chain Metadata, Secure Metadata Updates, Cross-Chain Compatibility, and JSON Structure
 
-## description
-Erc20 metadata.
+## Erc20 metadata.
 
 Abstract:
 This white paper introduces TokenID, a proposal to extend the ERC20 token standard with the integration of off-chain metadata, secure metadata updates, cross-chain compatibility, and a structured JSON format. TokenID leverages an open-source API service, Sign in with Ethereum authentication, and a JSON data structure to enable token owners to securely update and store essential metadata elements. By incorporating off-chain metadata, TokenID ensures transparency, trustworthiness, and seamless interactions within the token ecosystem. The JSON structure facilitates standardized data representation, while the inclusion of a signature by the ERC20 deployer enhances metadata authenticity and integrity.
