--- a/content/1.index.md
+++ b/content/1.index.md
@@ -1,3 +1,3 @@
 # TokenID
 
-## Enhancing ERC20 Tokens with Off-Chain Metadata, Secure Metadata Updates, Cross-Chain Compatibility, and JSON Structure
+## ERC20 Tokens Metadata and API.
