--- a/content/1.index.md
+++ b/content/1.index.md
@@ -1,3 +1,12 @@
+---
+title: TokenID
+navigation: false
+layout: page
+main:
+  fluid: false
+---
+
+
 # TokenID
 
 ## ERC20 Tokens Metadata and API.
