--- a/content/1.index.md
+++ b/content/1.index.md
@@ -3,9 +3,9 @@ title: TokenID
 navigation: false
 layout: page
 main:
-  fluid: false
+fluid: false
+redirect: introduction/white-paper
 ---
-
 
 # TokenID
 
