--- a/content/1.index.md
+++ b/content/1.index.md
@@ -1,10 +1,9 @@
 ---
 title: TokenID
-navigation: false
+navigation: true
 layout: page
 main:
 fluid: false
-redirect: introduction/white-paper
 ---
 
 # TokenID
