--- a/content/1.index.md
+++ b/content/1.index.md
@@ -1,3 +1,13 @@
+---
+header: false
+title: TokenID
+navigation: true
+layout: page
+main:
+fluid: false
+---
+
+
 # TokenID
 
 ## ERC20 Token Metadata and API.
