--- a/content/1.index.md
+++ b/content/1.index.md
@@ -6,13 +6,14 @@ main:
   fluid: true
 ---
 
-# TokenID
-
-## ERC20 Token Metadata and API.
+## ERC20 Token Metadata, Verification and API.
 
 ::block-hero
 ---
 cta:
   - Get started
   - /introduction/white-paper
+secondary:
+  - Open on GitHub →
+  - https://github.com/stebansaa/tokenid
 ---
