--- a/content/0.index.md
+++ b/content/0.index.md
@@ -1,19 +1,25 @@
 ---
 title: TokenID
-navigation: true
+navigation: false
 layout: page
 main:
   fluid: true
 ---
 
-## ERC20 Token Metadata, Verification and API.
+:ellipsis{right=0px width=75% blur=150px}
 
 ::block-hero
 ---
 cta:
   - Get started
-  - /introduction/white-paper
+  - /introduction/getting-started
 secondary:
   - Open on GitHub →
-  - https://github.com/stebansaa/tokenid
+  - https://github.com/evm20
 ---
+
+#title
+Learn everything about Frogge.Finance
+
+#description
+The frogge.finance documentation site.
