--- a/content/0.index.md
+++ b/content/0.index.md
@@ -18,4 +18,8 @@ secondary:
   - https://github.com/stebansaa/tokenid
 ---
 
+#title
+Learn everything about TokenID
 
+#description
+TokenID brings Metadata to all decentralized tokens
