--- a/content/0.index.md
+++ b/content/0.index.md
@@ -22,4 +22,4 @@ secondary:
 Learn everything about TokenID
 
 #description
-TokenID brings Metadata to all decentralized tokens
+TokenID extends with Metadata all decentralized tokens
