--- a/content/0.index.md
+++ b/content/0.index.md
@@ -22,4 +22,4 @@ secondary:
 Learn everything about TokenID
 
 #description
-TokenID adds basic Metadata to decentralized tokens
+TokenID adds Metadata to decentralized tokens
