--- a/content/0.index.md
+++ b/content/0.index.md
@@ -11,7 +11,7 @@ main:
 ::block-hero
 ---
 cta:
-  - Get started
+  - Read our Whitepaper
   - /introduction/white-paper
 secondary:
   - Open on GitHub →
