--- a/content/1.introduction/1.white-paper.md
+++ b/content/1.introduction/1.white-paper.md
@@ -3,7 +3,7 @@
 ## Enhancing ERC20 Tokens with Off-Chain Metadata, Secure Metadata Updates, Cross-Chain Compatibility, and JSON Structure
 
 ## Abstract:
-This white paper introduces TokenID, a proposal to extend the ERC20 token standard with the integration of off-chain metadata, secure metadata updates, cross-chain compatibility, and a structured JSON format. TokenID leverages an open-source API service, Sign in with Ethereum authentication, and a JSON data structure to enable token owners to securely update and store essential metadata elements. By incorporating off-chain metadata, TokenID ensures transparency, trustworthiness, and seamless interactions within the token ecosystem. The JSON structure facilitates standardized data representation, while the inclusion of a signature by the ERC20 deployer enhances metadata authenticity and integrity.
+This white paper introduces TokenID, a proposal to extend decentralized token with the integration of off-chain metadata, secure metadata updates, cross-chain compatibility, and a structured JSON format. TokenID leverages an open-source API service, Sign in with Ethereum authentication, and a JSON data structure to enable token owners to securely update and store essential metadata elements. By incorporating off-chain metadata, TokenID ensures transparency, trustworthiness, and seamless interactions within the token ecosystem. The JSON structure facilitates standardized data representation, while the inclusion of a signature by the ERC20 deployer enhances metadata authenticity and integrity.
 
 ### Introduction
 1.1 Background
@@ -72,3 +72,5 @@ Automated market makers, such as Uniswap, can leverage the Uniswap LP addresses 
 
 ## Conclusion
 The TokenID protocol presents a comprehensive solution for enhancing ERC20 tokens with off-chain metadata, secure metadata updates, cross-chain compatibility, and a structured JSON format. By incorporating off-chain metadata, TokenID addresses the limitations of on-chain storage, promotes trust, transparency, and seamless interactions within the token ecosystem. The inclusion of a structured JSON format and ERC20 deployer's signature facilitates standardized data representation and enhances metadata authenticity and integrity. Through integration with third-party platforms, TokenID enhances user experiences, fosters wider adoption, and paves the way for a new era of tokenization, empowering users with verifiable and up-to-date token information.
+
+123
