--- a/content/0.index.md
+++ b/content/0.index.md
@@ -22,4 +22,4 @@ secondary:
 Learn everything about TokenID
 
 #description
-TokenID addtions security Metadata to decentralized tokens
+TokenID, security Metadata for decentralized tokens
