--- a/content/1.introduction/1.white-paper.md
+++ b/content/1.introduction/1.white-paper.md
@@ -70,7 +70,7 @@ TokenID facilitates seamless integration with wallet providers, allowing them to
 ## 4.2 Automated Market Maker (AMM) Integration
 Automated market makers, such as Uniswap, can leverage the Uniswap LP addresses provided in the metadata to access liquidity pool information and facilitate token swaps. Integrating TokenID's metadata into AMM platforms enhances the trading experience and simplifies token interactions.
 
-## Conclusion
+## 5 Conclusion
 The TokenID protocol presents a comprehensive solution for enhancing ERC20 tokens with off-chain metadata, secure metadata updates, cross-chain compatibility, and a structured JSON format. By incorporating off-chain metadata, TokenID addresses the limitations of on-chain storage, promotes trust, transparency, and seamless interactions within the token ecosystem. The inclusion of a structured JSON format and ERC20 deployer's signature facilitates standardized data representation and enhances metadata authenticity and integrity. Through integration with third-party platforms, TokenID enhances user experiences, fosters wider adoption, and paves the way for a new era of tokenization, empowering users with verifiable and up-to-date token information.
 
 123
