--- a/content/1.introduction/1.white-paper.md
+++ b/content/1.introduction/1.white-paper.md
@@ -1,6 +1,6 @@
 # TokenID
 
-## Enhancing ERC20 Tokens with Off-Chain Metadata, Secure Metadata Updates, Cross-Chain Compatibility, and JSON Structure
+## Enhancing ERC20 Tokens with Off-Chain Metadata
 
 ## Abstract:
 This white paper introduces TokenID, a proposal to extend decentralized token with the integration of off-chain metadata, secure metadata updates, cross-chain compatibility, and a structured JSON format. TokenID leverages an open-source API service, Sign in with Ethereum authentication, and a JSON data structure to enable token owners to securely update and store essential metadata elements. By incorporating off-chain metadata, TokenID ensures transparency, trustworthiness, and seamless interactions within the token ecosystem. The JSON structure facilitates standardized data representation, while the inclusion of a signature by the ERC20 deployer enhances metadata authenticity and integrity.
