--- a/content/1.introduction/1.white-paper.md
+++ b/content/1.introduction/1.white-paper.md
@@ -42,6 +42,8 @@ Sign in with Ethereum authentication ensures that only authorized token owners c
 ### 3.3 JSON Data Structure
 TokenID implements a structured JSON format for token metadata. The JSON structure defines key-value pairs to represent essential metadata elements, including the token name, symbol, contract address, liquidity pool address, logo image URL, token description, explorer verification code, social profile links, and more. This standardized format ensures compatibility and ease of integration with various applications.
 
+
+```json
 {
 "tokenDeployer": "0xabcdef123456789",
 "name": "MyToken",
@@ -59,6 +61,7 @@ TokenID implements a structured JSON format for token metadata. The JSON structu
 },
 "signature": "0xabc123def456..."
 }
+```
 
 ## 3.4 Signature by ERC20 Deployer
 To enhance metadata authenticity and integrity, TokenID includes a signature by the ERC20 deployer within the JSON data structure. The deployer's signature serves as a cryptographic proof of authenticity, validating that the metadata originates from the authorized deployer.
