--- a/content/1.introduction/1.white-paper.md
+++ b/content/1.introduction/1.white-paper.md
@@ -1,47 +1,42 @@
 # TokenID
 
 ## Enhancing blockchain tokens with Off-Chain Metadata
+# Abstract:
+This white paper introduces TokenID, a proposal to secure decentralized tokens with the integration of off-chain metadata, metadata updates, cross-chain compatibility, and a structured JSON format. TokenID leverages an open-source API service, a JSON data structure, and various integration possibilities to enable token owners to securely update and store essential metadata elements. By incorporating off-chain metadata, TokenID ensures transparency, trustworthiness, and seamless interactions within the token ecosystem. The JSON structure facilitates standardized data representation, enhancing compatibility with third-party platforms.
 
-## Abstract:
-This white paper introduces TokenID, a proposal to secure decentralized token with the integration of off-chain metadata, metadata updates, cross-chain compatibility, and a structured JSON format. TokenID leverages an open-source API service, Sign in with Ethereum authentication, and a JSON data structure to enable token owners to securely update and store essential metadata elements. By incorporating off-chain metadata, TokenID ensures transparency, trustworthiness, and seamless interactions within the token ecosystem. The JSON structure facilitates standardized data representation, while the inclusion of a signature by the ERC20 deployer enhances metadata authenticity and integrity.
-
-### Introduction
-1.1 Background
+## Introduction
+## 1.1 Background
 In the blockchain landscape, the need to verify token authenticity and ensure transparent metadata has become increasingly vital. TokenID addresses this challenge by enhancing the ERC20 token standard with off-chain metadata, secure metadata updates, cross-chain compatibility, and a structured JSON format.
 
-### 1.2 Objectives
+## 1.2 Objectives
 TokenID aims to establish a robust and versatile token ecosystem by incorporating off-chain metadata, secure metadata updates, cross-chain compatibility, and a structured JSON format. These features provide users with comprehensive, verifiable token information, fostering trust, transparency, and streamlined interactions within the token ecosystem.
 
 The Importance of Off-Chain Metadata, Cross-Chain Compatibility, and JSON Structure
-### 2.1 Trustworthiness Verification
+
+## 2.1 Trustworthiness Verification
 Ensuring token legitimacy and trustworthiness requires additional verification mechanisms beyond the blockchain. The integration of off-chain metadata provides an extra layer of transparency, empowering users to assess a token's authenticity and trust.
 
-### 2.2 Limitations of On-Chain Storage for Metadata
-
-#### 2.2.1 Support for New Token Standards
+## 2.2 Limitations of On-Chain Storage for Metadata
+### 2.2.1 Support for New Token Standards
 TokenID is designed to accommodate the evolving blockchain landscape and supports the seamless integration of new token standards. By adopting an off-chain approach for metadata storage, TokenID can adapt to emerging standards without requiring extensive modifications to the underlying infrastructure.
 
-#### 2.2.2 Cross-Chain Compatibility
-TokenID enables the inclusion of tokens from different blockchain networks, promoting interoperability. A token multiple representations across chains becomes transparent and secure.  Through the API service and external server integration, token owners can provide metadata for tokens deployed on various blockchains, facilitating seamless interaction with diverse blockchain ecosystems. 
+### 2.2.2 Cross-Chain Compatibility
+TokenID enables the inclusion of tokens from different blockchain networks, promoting interoperability. The inclusion of multiple token representations across chains becomes transparent and secure. Through the API service and external server integration, token owners can provide metadata for tokens deployed on various blockchains, facilitating seamless interaction with diverse blockchain ecosystems.
 
 Protocol Overview: Off-Chain Metadata Integration, Secure Metadata Updates, and JSON Structure
+
 ## 3.1 API Service Architecture
 TokenID utilizes an open-source API service as a gateway for accessing off-chain metadata. Standardized APIs allow querying applications to request token-specific information from the API service.
 
-## 3.2 Token Owner Access and Secure Metadata Updates: Leveraging Sign in with Ethereum
-
-### 3.2.1 Sign in with Ethereum Authentication
-Token owners securely access the API service and perform metadata updates through the Sign in with Ethereum authentication mechanism. This authentication process establishes ownership and ensures authorized access to metadata settings.
+## 3.2 Token Owner Access and Secure Metadata Updates
+### 3.2.1 Secure Metadata Updates
+Token owners can securely update their token's metadata using the TokenID protocol. This ensures that metadata remains up to date and accurate, enhancing trust and transparency within the token ecosystem.
 
 ### 3.2.2 Enhanced Security and Trust
-The integration of Sign in with Ethereum authentication enhances the security and trust of metadata updates. Leveraging Ethereum's inherent security features, token owners can authenticate themselves without relying on traditional username/password credentials.
+The TokenID protocol leverages robust security measures to ensure the integrity and authenticity of metadata updates. By utilizing cryptographic mechanisms, token owners can securely authenticate themselves without relying on traditional username/password credentials.
 
-### 3.2.3 Protection Against Unauthorized Updates
-Sign in with Ethereum authentication ensures that only authorized token owners can access and update off-chain metadata, safeguarding against unauthorized modifications or tampering.
-
-### 3.3 JSON Data Structure
+## 3.3 JSON Data Structure
 TokenID implements a structured JSON format for token metadata. The JSON structure defines key-value pairs to represent essential metadata elements, including the token name, symbol, contract address, liquidity pool address, logo image URL, token description, explorer verification code, social profile links, and more. This standardized format ensures compatibility and ease of integration with various applications.
-
 
 ```json
 {
@@ -63,10 +58,6 @@ TokenID implements a structured JSON format for token metadata. The JSON structu
 }
 ```
 
-## 3.4 Signature by ERC20 Deployer
-To enhance metadata authenticity and integrity, TokenID includes a signature by the ERC20 deployer within the JSON data structure. The deployer's signature serves as a cryptographic proof of authenticity, validating that the metadata originates from the authorized deployer.
-
-
 # 4 Integration with Third-Party Platforms
 TokenID offers seamless integration with various third-party platforms, expanding its functionality and enhancing user experiences. The integration possibilities include wallet providers, automated market makers (AMMs), and cryptocurrency information websites.
 
@@ -81,9 +72,5 @@ TokenID also offers integration opportunities with cryptocurrency information we
 
 The integration with third-party platforms, including wallets, AMMs, and cryptocurrency information websites, broadens TokenID's reach, fosters wider adoption, and creates a more robust ecosystem for decentralized tokens. It empowers users with access to verifiable token information across multiple platforms, ultimately driving transparency, trust, and seamless interactions within the token ecosystem.
 
-## 5 Conclusion
+# 5 Conclusion
 The TokenID protocol presents a comprehensive solution for enhancing ERC20 tokens with off-chain metadata, secure metadata updates, cross-chain compatibility, and a structured JSON format. By incorporating off-chain metadata, TokenID addresses the limitations of on-chain storage, promotes trust, transparency, and seamless interactions within the token ecosystem. The inclusion of a structured JSON format and ERC20 deployer's signature facilitates standardized data representation and enhances metadata authenticity and integrity. Through integration with third-party platforms, TokenID enhances user experiences, fosters wider adoption, and paves the way for a new era of tokenization, empowering users with verifiable and up-to-date token information.
-
-
-
-
