--- a/content/1.introduction/1.white-paper.md
+++ b/content/1.introduction/1.white-paper.md
@@ -1,6 +1,6 @@
 # TokenID
 
-## Enhancing blockchain tokens with Off-Chain Metadata
+## Securing blockchain tokens with Off-Chain Metadata
 # Abstract:
 This white paper introduces TokenID, a proposal to secure decentralized tokens with the integration of off-chain metadata, metadata updates, cross-chain compatibility, and a structured JSON format. TokenID leverages an open-source API service, a JSON data structure, and various integration possibilities to enable token owners to securely update and store essential metadata elements. By incorporating off-chain metadata, TokenID ensures transparency, trustworthiness, and seamless interactions within the token ecosystem. The JSON structure facilitates standardized data representation, enhancing compatibility with third-party platforms.
 
