--- a/content/1.introduction/1.white-paper.md
+++ b/content/1.introduction/1.white-paper.md
@@ -1,10 +1,10 @@
 # TokenID
 
 ## Securing blockchain tokens with Off-Chain Metadata
-# Abstract:
+## Abstract:
 This white paper introduces TokenID, a proposal to secure decentralized tokens with the integration of off-chain metadata, metadata updates, cross-chain compatibility, and a structured JSON format. TokenID leverages an open-source API service, a JSON data structure, and various integration possibilities to enable token owners to securely update and store essential metadata elements. By incorporating off-chain metadata, TokenID ensures transparency, trustworthiness, and seamless interactions within the token ecosystem. The JSON structure facilitates standardized data representation, enhancing compatibility with third-party platforms.
 
-## Introduction
+# Introduction
 ## 1.1 Background
 In the blockchain landscape, the need to verify token authenticity and ensure transparent metadata has become increasingly vital. TokenID addresses this challenge by enhancing the ERC20 token standard with off-chain metadata, secure metadata updates, cross-chain compatibility, and a structured JSON format.
 
@@ -20,7 +20,7 @@ Ensuring token legitimacy and trustworthiness requires additional verification m
 ### 2.2.1 Support for New Token Standards
 TokenID is designed to accommodate the evolving blockchain landscape and supports the seamless integration of new token standards. By adopting an off-chain approach for metadata storage, TokenID can adapt to emerging standards without requiring extensive modifications to the underlying infrastructure.
 
-### 2.2.2 Cross-Chain Compatibility
+### 2.2.2 Cross-Chain Compatibility
 TokenID enables the inclusion of tokens from different blockchain networks, promoting interoperability. The inclusion of multiple token representations across chains becomes transparent and secure. Through the API service and external server integration, token owners can provide metadata for tokens deployed on various blockchains, facilitating seamless interaction with diverse blockchain ecosystems.
 
 Protocol Overview: Off-Chain Metadata Integration, Secure Metadata Updates, and JSON Structure
