--- a/content/1.introduction/1.white-paper.md
+++ b/content/1.introduction/1.white-paper.md
@@ -1,76 +1,112 @@
 # TokenID
 
 ## Securing blockchain tokens with Off-Chain Metadata
+
 ## Abstract:
+
 This white paper introduces TokenID, a proposal to secure decentralized tokens with the integration of off-chain metadata, metadata updates, cross-chain compatibility, and a structured JSON format. TokenID leverages an open-source API service, a JSON data structure, and various integration possibilities to enable token owners to securely update and store essential metadata elements. By incorporating off-chain metadata, TokenID ensures transparency, trustworthiness, and seamless interactions within the token ecosystem. The JSON structure facilitates standardized data representation, enhancing compatibility with third-party platforms.
 
 # Introduction
+
 ## 1.1 Background
+
 In the blockchain landscape, the need to verify token authenticity and ensure transparent metadata has become increasingly vital. TokenID addresses this challenge by enhancing the ERC20 token standard with off-chain metadata, secure metadata updates, cross-chain compatibility, and a structured JSON format.
 
 ## 1.2 Objectives
+
 TokenID aims to establish a robust and versatile token ecosystem by incorporating off-chain metadata, secure metadata updates, cross-chain compatibility, and a structured JSON format. These features provide users with comprehensive, verifiable token information, fostering trust, transparency, and streamlined interactions within the token ecosystem.
 
-The Importance of Off-Chain Metadata, Cross-Chain Compatibility, and JSON Structure
-
+# The Importance of Off-Chain Metadata, Cross-Chain Compatibility, and JSON Structure
+ 
 ## 2.1 Trustworthiness Verification
-Ensuring token legitimacy and trustworthiness requires additional verification mechanisms beyond the blockchain. The integration of off-chain metadata provides an extra layer of transparency, empowering users to assess a token's authenticity and trust.
+
+Ensuring token legitimacy and trustworthiness requires additional verification mechanisms beyond the blockchain. The integration of off-chain metadata provides an extra layer of transparency, empowering users to assess a token's authenticity and trust.  
 
 ## 2.2 Limitations of On-Chain Storage for Metadata
+
 ### 2.2.1 Support for New Token Standards
+
 TokenID is designed to accommodate the evolving blockchain landscape and supports the seamless integration of new token standards. By adopting an off-chain approach for metadata storage, TokenID can adapt to emerging standards without requiring extensive modifications to the underlying infrastructure.
 
 ### 2.2.2 Cross-Chain Compatibility
+
 TokenID enables the inclusion of tokens from different blockchain networks, promoting interoperability. The inclusion of multiple token representations across chains becomes transparent and secure. Through the API service and external server integration, token owners can provide metadata for tokens deployed on various blockchains, facilitating seamless interaction with diverse blockchain ecosystems.
 
-Protocol Overview: Off-Chain Metadata Integration, Secure Metadata Updates, and JSON Structure
+## Protocol Overview: Off-Chain Metadata Integration, Secure Metadata Updates, and JSON Structure  
 
-## 3.1 API Service Architecture
-TokenID utilizes an open-source API service as a gateway for accessing off-chain metadata. Standardized APIs allow querying applications to request token-specific information from the API service.
+## 3.1 API Service Architecture
+
+TokenID utilizes an open-source API service as a gateway for accessing off-chain metadata. Standardized APIs allow querying applications to request token-specific information from the API service.  
 
 ## 3.2 Token Owner Access and Secure Metadata Updates
+
 ### 3.2.1 Secure Metadata Updates
+
 Token owners can securely update their token's metadata using the TokenID protocol. This ensures that metadata remains up to date and accurate, enhancing trust and transparency within the token ecosystem.
 
 ### 3.2.2 Enhanced Security and Trust
-The TokenID protocol leverages robust security measures to ensure the integrity and authenticity of metadata updates. By utilizing cryptographic mechanisms, token owners can securely authenticate themselves without relying on traditional username/password credentials.
 
-## 3.3 JSON Data Structure
+The TokenID protocol leverages robust security measures to ensure the integrity and authenticity of metadata updates. By utilizing cryptographic mechanisms, token owners can securely authenticate themselves without relying on traditional username/password credentials. 
+
+## 3.3 JSON Data Structure
+
 TokenID implements a structured JSON format for token metadata. The JSON structure defines key-value pairs to represent essential metadata elements, including the token name, symbol, contract address, liquidity pool address, logo image URL, token description, explorer verification code, social profile links, and more. This standardized format ensures compatibility and ease of integration with various applications.
 
 ```json
-{
-"tokenDeployer": "0xabcdef123456789",
-"name": "MyToken",
-"symbol": "MTK",
-"contractAddress": "0x123456789abcdef",
-"metadata": {
-"liquidityPoolAddress": "0xabcdef123456789",
-"logoUrl": "https://example.com/mytoken-logo.png",
-"description": "MyToken is a decentralized digital currency...",
-"codeVerificationUrl": "https://example.com/mytoken-verification",
-"websiteUrl": "https://example.com/mytoken-website",
-"socialProfiles": {
-"twitter": "https://twitter.com/mytoken"
-}
-},
-"signature": "0xabc123def456..."
-}
-```
 
-# 4 Integration with Third-Party Platforms
+{
+
+"tokenDeployer": "0xabcdef123456789",
+
+"name": "MyToken",
+
+"symbol": "MTK",
+
+"contractAddress": "0x123456789abcdef",
+
+"metadata": {
+
+"liquidityPoolAddress": "0xabcdef123456789",
+
+"logoUrl": "https://example.com/mytoken-logo.png",
+
+"description": "MyToken is a decentralized digital currency...",
+
+"codeVerificationUrl": "https://example.com/mytoken-verification",
+
+"websiteUrl": "https://example.com/mytoken-website",
+
+"socialProfiles": {
+
+"twitter": "https://twitter.com/mytoken"
+
+}
+
+},
+
+"signature": "0xabc123def456..."
+
+}
+
+```
+# Integration with Third-Party Platforms
+
 TokenID offers seamless integration with various third-party platforms, expanding its functionality and enhancing user experiences. The integration possibilities include wallet providers, automated market makers (AMMs), and cryptocurrency information websites.
 
 ## 4.1 Wallet Integration and Comprehensive Token Information
+
 TokenID enables smooth integration with wallet providers, allowing them to display comprehensive token information to users. Wallets can incorporate the JSON metadata obtained through the API service, which includes essential details such as the token description, social profile links, Uniswap LP addresses, and coin logo image URLs. This integration significantly enhances the user experience by providing detailed insights into the token and empowering users with comprehensive information.
 
 ## 4.2 Automated Market Maker (AMM) Integration and Streamlined Trading
+
 Automated market makers, like Uniswap, can leverage the Uniswap LP addresses provided in the metadata to access liquidity pool information and facilitate token swaps. By integrating TokenID's metadata into AMM platforms, the trading experience becomes more streamlined and simplified. Users can benefit from the enriched token data and make informed decisions when engaging in token swaps through AMMs.
 
 ## 4.3 Integration with Cryptocurrency Information Websites
+
 TokenID also offers integration opportunities with cryptocurrency information websites such as CoinMarketCap. These websites can leverage the standardized JSON metadata obtained from TokenID to provide accurate and up-to-date token information to their users. By incorporating TokenID's off-chain metadata, these websites enhance the reliability and completeness of the token data they present, fostering trust and facilitating informed decision-making for cryptocurrency enthusiasts.
 
 The integration with third-party platforms, including wallets, AMMs, and cryptocurrency information websites, broadens TokenID's reach, fosters wider adoption, and creates a more robust ecosystem for decentralized tokens. It empowers users with access to verifiable token information across multiple platforms, ultimately driving transparency, trust, and seamless interactions within the token ecosystem.
 
-# 5 Conclusion
+# Conclusion
+
 The TokenID protocol presents a comprehensive solution for enhancing ERC20 tokens with off-chain metadata, secure metadata updates, cross-chain compatibility, and a structured JSON format. By incorporating off-chain metadata, TokenID addresses the limitations of on-chain storage, promotes trust, transparency, and seamless interactions within the token ecosystem. The inclusion of a structured JSON format and ERC20 deployer's signature facilitates standardized data representation and enhances metadata authenticity and integrity. Through integration with third-party platforms, TokenID enhances user experiences, fosters wider adoption, and paves the way for a new era of tokenization, empowering users with verifiable and up-to-date token information.
