--- a/content/1.introduction/1.white-paper.md
+++ b/content/1.introduction/1.white-paper.md
@@ -6,7 +6,7 @@
 
 This white paper introduces TokenID, a proposal to secure decentralized tokens with the integration of off-chain metadata, metadata updates, cross-chain compatibility, and a structured JSON format. TokenID leverages an open-source API service, a JSON data structure, and various integration possibilities to enable token owners to securely update and store essential metadata elements. By incorporating off-chain metadata, TokenID ensures transparency, trustworthiness, and seamless interactions within the token ecosystem. The JSON structure facilitates standardized data representation, enhancing compatibility with third-party platforms.
 
-# Introduction
+## Introduction
 
 ## 1.1 Background
 
@@ -16,7 +16,7 @@ In the blockchain landscape, the need to verify token authenticity and ensure tr
 
 TokenID aims to establish a robust and versatile token ecosystem by incorporating off-chain metadata, secure metadata updates, cross-chain compatibility, and a structured JSON format. These features provide users with comprehensive, verifiable token information, fostering trust, transparency, and streamlined interactions within the token ecosystem.
 
-# The Importance of Off-Chain Metadata, Cross-Chain Compatibility, and JSON Structure
+## The Importance of Off-Chain Metadata, Cross-Chain Compatibility, and JSON Structure
  
 ## 2.1 Trustworthiness Verification
 
@@ -89,7 +89,7 @@ TokenID implements a structured JSON format for token metadata. The JSON structu
 }
 
 ```
-# Integration with Third-Party Platforms
+## Integration with Third-Party Platforms
 
 TokenID offers seamless integration with various third-party platforms, expanding its functionality and enhancing user experiences. The integration possibilities include wallet providers, automated market makers (AMMs), and cryptocurrency information websites.
 
@@ -107,6 +107,6 @@ TokenID also offers integration opportunities with cryptocurrency information we
 
 The integration with third-party platforms, including wallets, AMMs, and cryptocurrency information websites, broadens TokenID's reach, fosters wider adoption, and creates a more robust ecosystem for decentralized tokens. It empowers users with access to verifiable token information across multiple platforms, ultimately driving transparency, trust, and seamless interactions within the token ecosystem.
 
-# Conclusion
+## Conclusion
 
 The TokenID protocol presents a comprehensive solution for enhancing ERC20 tokens with off-chain metadata, secure metadata updates, cross-chain compatibility, and a structured JSON format. By incorporating off-chain metadata, TokenID addresses the limitations of on-chain storage, promotes trust, transparency, and seamless interactions within the token ecosystem. The inclusion of a structured JSON format and ERC20 deployer's signature facilitates standardized data representation and enhances metadata authenticity and integrity. Through integration with third-party platforms, TokenID enhances user experiences, fosters wider adoption, and paves the way for a new era of tokenization, empowering users with verifiable and up-to-date token information.
