--- a/content/1.introduction/1.white-paper.md
+++ b/content/1.introduction/1.white-paper.md
@@ -4,7 +4,7 @@
 
 ## Abstract:
 
-This white paper introduces TokenID, a proposal to secure decentralized tokens with the integration of off-chain metadata, metadata updates, cross-chain compatibility, and a structured JSON format. TokenID leverages an open-source API service, a JSON data structure, and various integration possibilities to enable token owners to securely update and store essential metadata elements. By incorporating off-chain metadata, TokenID ensures transparency, trustworthiness, and seamless interactions within the token ecosystem. The JSON structure facilitates standardized data representation, enhancing compatibility with third-party platforms.
+This white paper introduces TokenID, a proposal to secure decentralized tokens with the integration of off-chain metadata. TokenID generates an open-source API service providing a JSON data structure, enabling various integration possibilities for decetranlized service providersa and token owners. By incorporating off-chain metadata, TokenID ensures transparency, trustworthiness, and seamless interactions within the token ecosystem. The JSON structure facilitates standardized data representation, enhancing compatibility with third-party platforms.
 
 ## Introduction
 
@@ -30,7 +30,7 @@ TokenID is designed to accommodate the evolving blockchain landscape and support
 
 ### 2.2.2 Cross-Chain Compatibility
 
-TokenID enables the inclusion of tokens from different blockchain networks, promoting interoperability. The inclusion of multiple token representations across chains becomes transparent and secure. Through the API service and external server integration, token owners can provide metadata for tokens deployed on various blockchains, facilitating seamless interaction with diverse blockchain ecosystems.
+TokenID enables the inclusion of tokens from different blockchain networks, promoting interoperability. Further, the inclusion of multiple token representations across chains becomes transparent and secure. Through the API service, external server integration, the ecosystem can access token metadata for tokens deployed on various blockchains, facilitating seamless interaction.
 
 ## 3 Protocol Overview: Off-Chain Metadata Integration, Secure Metadata Updates, and JSON Structure  
 
@@ -42,19 +42,16 @@ TokenID utilizes an open-source API service as a gateway for accessing off-chain
 
 ### 3.2.1 Secure Metadata Updates
 
-Token owners can securely update their token's metadata using the TokenID protocol. This ensures that metadata remains up to date and accurate, enhancing trust and transparency within the token ecosystem.
-
-### 3.2.2 Enhanced Security and Trust
-
-The TokenID protocol leverages robust security measures to ensure the integrity and authenticity of metadata updates. By utilizing cryptographic mechanisms, token owners can securely authenticate themselves without relying on traditional username/password credentials. 
+Token owners can securely update their token's metadata by providing a signed message of the JSON data structure containig the metadata. This ensures that metadata remains up to date and accurate, enhancing trust and transparency within the token ecosystem; while also maintaining the tokens keys secure. The TokenID protocol leverages robust security measures to ensure the integrity and authenticity of metadata updates. By utilizing cryptographic mechanisms, token owners can securely authenticate themselves without relying on traditional username/password credentials. 
 
 ## 3.3 JSON Data Structure
 
-TokenID implements a structured JSON format for token metadata. The JSON structure defines key-value pairs to represent essential metadata elements, including the token name, symbol, contract address, liquidity pool address, logo image URL, token description, explorer verification code, social profile links, and more. This standardized format ensures compatibility and ease of integration with various applications.
+TokenID implements a structured JSON format for token metadata. The JSON structure defines key-value pairs to represent essential metadata elements, including the deployer address,  contract address, liquidity pool address, logo image URL, token description, explorer verification code, social profile links, and more. This standardized format ensures compatibility and ease of integration with various applications, across multiple chains
 
 ```json
 
 {
+"blockChainID": "ethereum",    
 "tokenDeployer": "0xabcdef123456789",
 "contractAddress": "0x123456789abcdef",
 "metadata": {
