--- a/content/1.introduction/1.white-paper.md
+++ b/content/1.introduction/1.white-paper.md
@@ -10,7 +10,7 @@ This white paper introduces TokenID, a proposal to secure decentralized tokens w
 
 ## 1.1 Background
 
-In the blockchain landscape, the need to verify token authenticity and ensure transparent metadata has become increasingly vital. TokenID addresses this challenge by enhancing the ERC20 token standard with off-chain metadata, secure metadata updates, cross-chain compatibility, and a structured JSON format.
+In the blockchain landscape, the need to verify token authenticity and ensure transparent metadata has become increasingly vital. TokenID addresses this challenge by enhancing token standards with off-chain metadata, secure metadata updates, cross-chain compatibility, and a structured JSON format.
 
 ## 1.2 Objectives
 
