--- a/content/1.introduction/1.white-paper.md
+++ b/content/1.introduction/1.white-paper.md
@@ -4,7 +4,7 @@
 
 ## Abstract:
 
-This white paper introduces TokenID, a proposal to secure decentralized tokens with the integration of off-chain metadata. TokenID generates an open-source API service providing a JSON data structure, enabling various integration possibilities for decetranlized service providers. By incorporating off-chain metadata, TokenID increases security, ensures transparency, trustworthiness, and seamless interactions within the token ecosystem. The JSON structure facilitates standardized data representation, enhancing compatibility with third-party platforms.
+This white paper introduces TokenID, a proposal to secure decentralized tokens with the integration of off-chain metadata. TokenID generates an open-source API service providing a JSON data structure, enabling various integration possibilities for decetranlized service providers. By incorporating off-chain metadata, TokenID increases security, ensures transparency, trustworthiness, and seamless interactions within the token ecosystem. The JSON structure facilitates standardized data representation, enhancing compatibility with third-party platforms; while making data updates easy and secure. 
 
 ## Introduction
 
@@ -30,7 +30,7 @@ TokenID is designed to accommodate the evolving blockchain landscape and support
 
 ### 2.2.2 Cross-Chain Compatibility
 
-TokenID enables the inclusion of tokens from different blockchain networks, promoting interoperability. Further, the inclusion of multiple token representations across chains becomes transparent and secure. Through the API service, external server integration, the ecosystem can access token metadata for tokens deployed on various blockchains, facilitating seamless interaction.
+TokenID enables the inclusion of tokens from different blockchain networks, promoting interoperability. Further, the inclusion of multiple token representations across chains improve transparency and security. Through an API service, the ecosystem can access token metadata for tokens deployed on various blockchains, facilitating seamless interaction.
 
 ## Protocol Overview: Off-Chain Metadata Integration, Secure Metadata Updates, and JSON Structure  
 
@@ -42,14 +42,13 @@ TokenID utilizes an open-source API service as a gateway for accessing off-chain
 
 ### 3.2.1 Secure Metadata Updates
 
-Token owners can securely update their token's metadata by providing a signed message of the JSON data structure containig the metadata. This ensures that metadata remains up to date and accurate, enhancing trust and transparency within the token ecosystem; while also maintaining the tokens keys secure. The TokenID protocol leverages robust security measures to ensure the integrity and authenticity of metadata updates. By utilizing cryptographic mechanisms, token owners can securely authenticate themselves without relying on traditional username/password credentials. 
+Token owners can securely update their token's metadata by providing a signed message of the JSON data structure containig the metadata. This ensures that metadata remains up to date and accurate, enhancing trust and transparency within the token ecosystem; while also maintaining the tokens keys secure. The TokenID protocol leverages robust security measures to ensure the integrity and authenticity of metadata updates. By utilizing cryptographic mechanisms, token owners can securely authenticate themselves without relying on traditional less secure methods. 
 
 ## 3.3 JSON Data Structure
 
-TokenID implements a structured JSON format for token metadata. The JSON structure defines key-value pairs to represent essential metadata elements, including the deployer address,  contract address, liquidity pool address, logo image URL, token description, explorer verification code, social profile links, and more. This standardized format ensures compatibility and ease of integration with various applications, across multiple chains
+TokenID implements a structured JSON format for token metadata. The JSON structure defines key-value pairs to represent essential metadata elements, including blockchain,  deployer address,  contract address, liquidity pool address, logo image URL, token description, explorer verification code, social profile links, and more. This standardized format ensures compatibility and ease of integration with various applications, across multiple chains.
 
 ```json
-
 {
 "blockChainID": "ethereum",    
 "tokenDeployer": "0xabcdef123456789",
@@ -66,8 +65,8 @@ TokenID implements a structured JSON format for token metadata. The JSON structu
 },
 "signature": "0xabc123def456..."
 }
-
 ```
+
 ## Integration with Third-Party Platforms
 
 TokenID offers seamless integration with various third-party platforms, expanding its functionality and enhancing user experiences. The integration possibilities include wallet providers, automated market makers (AMMs), and cryptocurrency information websites.
@@ -88,4 +87,4 @@ The integration with third-party platforms, including wallets, AMMs, and cryptoc
 
 ## Conclusion
 
-The TokenID protocol presents a comprehensive solution for enhancing ERC20 tokens with off-chain metadata, secure metadata updates, cross-chain compatibility, and a structured JSON format. By incorporating off-chain metadata, TokenID addresses the limitations of on-chain storage, promotes trust, transparency, and seamless interactions within the token ecosystem. The inclusion of a structured JSON format and ERC20 deployer's signature facilitates standardized data representation and enhances metadata authenticity and integrity. Through integration with third-party platforms, TokenID enhances user experiences, fosters wider adoption, and paves the way for a new era of tokenization, empowering users with verifiable and up-to-date token information.
+The TokenID protocol presents a comprehensive solution for enhancing ERC20 tokens with off-chain metadata, secure metadata updates, cross-chain compatibility, and a structured JSON format. By incorporating off-chain metadata, TokenID addresses the limitations of on-chain storage, promotes trust, transparency, and seamless interactions within the token ecosystem. The inclusion of a structured JSON format and token deployer's signature facilitates standardized data representation and enhances metadata authenticity and integrity. Through integration with third-party platforms, TokenID enhances user experiences, fosters wider adoption, and paves the way for a new era of tokenization, empowering users with verifiable and up-to-date token information.
