--- a/content/1.introduction/1.white-paper.md
+++ b/content/1.introduction/1.white-paper.md
@@ -85,6 +85,16 @@ TokenID also offers integration opportunities with cryptocurrency information we
 
 The integration with third-party platforms, including wallets, AMMs, and cryptocurrency information websites, broadens TokenID's reach, fosters wider adoption, and creates a more robust ecosystem for decentralized tokens. It empowers users with access to verifiable token information across multiple platforms, ultimately driving transparency, trust, and seamless interactions within the token ecosystem.
 
+
+## Enhanced Security
+TokenID introduces several features that enhance the security of decentralized tokens and protect users from potential risks. These security enhancements provide a robust foundation for trust and reliability within the token ecosystem. Other parties services can leverage the data available on the API and help bring attention to possible issues. 
+
+## 5.1 Early Alert of Token Impersonation
+One of the key security benefits of TokenID is its ability to provide early alerts for token impersonation attempts. By incorporating off-chain metadata and signature verification, TokenID enables token owners and users to verify the authenticity of tokens more effectively. This helps to identify and prevent potential scams or fraudulent activities by detecting unauthorized tokens attempting to mimic legitimate ones.
+
+## 5.2 Red Flagging of Suspicious Assets
+TokenID also includes mechanisms to red flag suspicious assets within the token ecosystem. Through the structured JSON format and integration with third-party platforms, TokenID allows for the identification and monitoring of tokens that exhibit suspicious characteristics. This feature helps users and platform providers to exercise caution when dealing with potentially risky or suspicious tokens, contributing to a safer and more secure token environment.
+
 ## Conclusion
 
 The TokenID protocol presents a comprehensive solution for enhancing ERC20 tokens with off-chain metadata, secure metadata updates, cross-chain compatibility, and a structured JSON format. By incorporating off-chain metadata, TokenID addresses the limitations of on-chain storage, promotes trust, transparency, and seamless interactions within the token ecosystem. The inclusion of a structured JSON format and token deployer's signature facilitates standardized data representation and enhances metadata authenticity and integrity. Through integration with third-party platforms, TokenID enhances user experiences, fosters wider adoption, and paves the way for a new era of tokenization, empowering users with verifiable and up-to-date token information.
